# Estruturas-de-Dados-Prova-1

./: CMakeLists.txt  readme.md
exercise/: doubly_linked_list.cpp  linked_list.cpp  vector_list.cpp
src/: doubly_linked_list.hpp  linked_list.hpp  vector_list.hpp
test/: doubly_linked_list.cpp
